<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:focusableInTouchMode="true">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:id="@+id/latitude"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_toRightOf="@id/latitude"
            android:id="@+id/latitudeDisplay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_below="@+id/latitude"
            android:id="@+id/longitude"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_below="@+id/latitude"
            android:layout_toRightOf="@id/longitude"
            android:id="@+id/longitudeDisplay"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:layout_below="@+id/longitude"
            android:spinnerMode="dropdown"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/photoDisplay"
            android:layout_margin="30dp"
            android:paddingBottom="10dp"
            android:layout_below="@+id/uploadImage"
            android:layout_centerHorizontal="true"
            android:maxHeight="400dp"
            android:maxWidth="300dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uploadImage"
            android:text="@string/upload_image"
            android:clickable="true"
            android:padding="20dp"
            android:layout_below="@+id/spinner1"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writeDescription"
            android:paddingLeft="8dp"
            android:layout_below="@+id/photoDisplay"
            android:id="@+id/writeDesc"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:maxLength="300"
            android:layout_below="@+id/writeDesc"
            android:background="@drawable/shape"
            android:gravity="top"
            android:inputType="textNoSuggestions|textMultiLine"
            android:scrollbars="vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/editText1"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit"
                android:text="@string/submit"
                android:clickable="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:clickable="true"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>